= RSpec Changelog

== Version 0.5.4 (in SVN)
Release notes go here

* Remove mock.rb from backtrace

== Version 0.5.3
The "hurry up, CoR is in two days" release.

* Don't run rcov by default [aslak_hellesoy]
* Make separate task for running tests with RCov [aslak_hellesoy]
* Added Rake task to fail build if coverage drops below a certain threshold [aslak_hellesoy]
* Even more failure output cleanup (simplification) [dchelimsky]
* Added duck_type constraint for mocks [dchelimsky]

== Version 0.5.2
This release has minor improvements to the commandline and fixes some gem warnings

* Readded README to avoid RDoc warnings [aslak_hellesoy]
* Added --version switch to commandline [aslak_hellesoy]
* More changes to the mock API [dastels], [dchelimsky]

== Version 0.5.1
This release is the first release of RSpec with a new website. It will look better soon.

* Added initial documentation for API [dastels]
* Added website based on webgen [aslak_hellesoy]
* Modified test task to use rcov [aslak_hellesoy]
* Deleted unused code (thanks, rcov!) [aslak_hellesoy]
* Various changes to the mock API [dastels], [dchelimsky]
* Various improvements to failure reporting [dchelimsky]

== Version 0.5.0
This release introduces a new API and obsolesces previous versions.

* Moved source code to separate subfolders
* Added new DSL runner based on instance_exec
* Added spike for testdox/rdoc generation
* merge Astels' and Chelimsky's work on ShouldHelper
* this would be 0.5.0 if I updated the documentation
* it breaks all of your existing specifications.  We're not sorry.

== Version 0.3.2

The "srbaker is an idiot" release.

* also forgot to update the path to the actual Subversion repository
* this should be it

== Version 0.3.1

This is just 0.3.0, but with the TUTORIAL added to the documentation list.

* forgot to include TUTORIAL in the documentation

== Version 0.3.0

It's been a while since last release, lots of new stuff is available.  For instance:

* improvements to the runners